--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   },
