--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
     "rxjs": "^5.4.3",
+    "validator": "^8.2.0",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
