--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
+    "csv-parse": "^1.2.2",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "method-override": "^2.3.9",
