--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.7",
     "csv-parse": "^3.0.0",
+    "dateformat": "^3.0.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
